Update doToQuery to no longer throw, to support BWC